-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 4.3.0
-
None
-
Linux
In the right panel with the tree view of object.
I've got two distinct bugs :
- An infinite loop when dropping an object on itself or one of its children.
Here is a GDB stack trace:
#0 0x00007fffd351c2b4 in qmt::DUpdateVisitor::visitMObject(qmt::MObject const*) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #1 0x00007fffd351c828 in qmt::DUpdateVisitor::visitMClass(qmt::MClass const*) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #2 0x00007fffd35143af in qmt::DiagramController::updateElementFromModel(qmt::DElement*, qmt::MDiagram const*, bool) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #3 0x00007fffd35148b6 in qmt::DiagramController::onEndUpdateObject(int, qmt::MObject const*) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #4 0x00007fffd35149c5 in qmt::DiagramController::onEndMoveObject(int, qmt::MObject const*) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #5 0x00007ffff5bdf746 in QMetaObject::activate(QObject*, int, int, void**) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #6 0x00007fffd35ed00a in qmt::ModelController::endMoveObject(int, qmt::MObject const*) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #7 0x00007fffd3557a0d in qmt::ModelController::moveObject(qmt::MPackage*, qmt::MObject*) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #8 0x00007fffd3571bda in qmt::ModelTreeView::dropEvent(QDropEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #9 0x00007ffff6f22008 in QWidget::event(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #10 0x00007ffff70017be in QFrame::event(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #11 0x00007ffff71172cc in QAbstractItemView::viewportEvent(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #12 0x00007ffff71545bc in QTreeView::viewportEvent(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #13 0x00007ffff5bb61f2 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #14 0x00007ffff6eddda5 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #15 0x00007ffff6ee578e in QApplication::notify(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #16 0x00007ffff5bb6458 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #17 0x00007ffff6f3d69a in ?? () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #18 0x00007ffff6f3e2e3 in ?? () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #19 0x00007ffff6edddcc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #20 0x00007ffff6ee5236 in QApplication::notify(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #21 0x00007ffff5bb6458 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #22 0x00007ffff671d388 in QGuiApplicationPrivate::processDrop(QWindow*, QMimeData const*, QPoint const&, QFlags<Qt::DropAction>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #23 0x00007ffff66fac7f in QWindowSystemInterface::handleDrop(QWindow*, QMimeData const*, QPoint const&, QFlags<Qt::DropAction>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #24 0x00007fffefd3e211 in ?? () from /usr/lib/libQt5XcbQpa.so.5 #25 0x00007fffefd406d7 in ?? () from /usr/lib/libQt5XcbQpa.so.5 #26 0x00007ffff671093a in QBasicDrag::eventFilter(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #27 0x00007ffff5bb60e4 in QCoreApplicationPrivate::sendThroughApplicationEventFilters(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #28 0x00007ffff6edde08 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #29 0x00007ffff6ee5236 in QApplication::notify(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #30 0x00007ffff5bb6458 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #31 0x00007ffff671bbb0 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #32 0x00007ffff671d955 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #33 0x00007ffff66faa1b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #34 0x00007fffefd934c0 in ?? () from /usr/lib/libQt5XcbQpa.so.5 #35 0x00007ffff15257b7 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0 #36 0x00007ffff1525a20 in ?? () from /usr/lib/libglib-2.0.so.0 #37 0x00007ffff1525acc in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0 #38 0x00007ffff5c06cbf in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #39 0x00007ffff5bb49ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #40 0x00007ffff6710d02 in QBasicDrag::drag(QDrag*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #41 0x00007ffff672be71 in QDragManager::drag(QDrag*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #42 0x00007ffff672a85c in QDrag::exec(QFlags<Qt::DropAction>, Qt::DropAction) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #43 0x00007fffd3572341 in qmt::ModelTreeView::startDrag(QFlags<Qt::DropAction>) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #44 0x00007ffff71168d6 in QAbstractItemView::mouseMoveEvent(QMouseEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #45 0x00007ffff7154ee3 in QTreeView::mouseMoveEvent(QMouseEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #46 0x00007ffff6f22008 in QWidget::event(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #47 0x00007ffff70017be in QFrame::event(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #48 0x00007ffff71172cc in QAbstractItemView::viewportEvent(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #49 0x00007ffff71545bc in QTreeView::viewportEvent(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #50 0x00007ffff5bb61f2 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #51 0x00007ffff6eddda5 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #52 0x00007ffff6ee5c2d in QApplication::notify(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #53 0x00007ffff5bb6458 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #54 0x00007ffff6ee487f in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #55 0x00007ffff6f3b9f6 in ?? () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #56 0x00007ffff6f3e32b in ?? () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #57 0x00007ffff6edddcc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #58 0x00007ffff6ee5236 in QApplication::notify(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #59 0x00007ffff5bb6458 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #60 0x00007ffff671bbb0 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #61 0x00007ffff671d955 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #62 0x00007ffff66faa1b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #63 0x00007fffefd934c0 in ?? () from /usr/lib/libQt5XcbQpa.so.5 #64 0x00007ffff15257b7 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0 #65 0x00007ffff1525a20 in ?? () from /usr/lib/libglib-2.0.so.0 #66 0x00007ffff1525acc in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0 #67 0x00007ffff5c06cbf in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #68 0x00007ffff5bb49ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #69 0x00007ffff5bbc9f4 in QCoreApplication::exec() () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #70 0x0000000000409aa7 in ?? () #71 0x00007ffff486343a in __libc_start_main () from /usr/lib/libc.so.6 #72 0x000000000040a401 in ?? ()
- Another one more elusive when dragging stuff in the tree that produces the following :
SOFT ASSERT: "parentItem" in file /work/build/qt-creator/src/libs/modelinglib/qmt/model_ui/treemodel.cpp, line 580
Edit:
managed to get the second crash :
#0 0x00007ffff6a232c7 in QStandardItem::insertRow(int, QList<QStandardItem*> const&) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #1 0x00007fffd3569f0f in qmt::TreeModel::onEndMoveObject(int, qmt::MObject const*) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #2 0x00007ffff5bdf746 in QMetaObject::activate(QObject*, int, int, void**) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #3 0x00007fffd35ed00a in qmt::ModelController::endMoveObject(int, qmt::MObject const*) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #4 0x00007fffd3557a0d in qmt::ModelController::moveObject(qmt::MPackage*, qmt::MObject*) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #5 0x00007fffd3571bda in qmt::ModelTreeView::dropEvent(QDropEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #6 0x00007ffff6f22008 in QWidget::event(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #7 0x00007ffff70017be in QFrame::event(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #8 0x00007ffff71172cc in QAbstractItemView::viewportEvent(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #9 0x00007ffff71545bc in QTreeView::viewportEvent(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #10 0x00007ffff5bb61f2 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #11 0x00007ffff6eddda5 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #12 0x00007ffff6ee578e in QApplication::notify(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #13 0x00007ffff5bb6458 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #14 0x00007ffff6f3d69a in ?? () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #15 0x00007ffff6f3e2e3 in ?? () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #16 0x00007ffff6edddcc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #17 0x00007ffff6ee5236 in QApplication::notify(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #18 0x00007ffff5bb6458 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #19 0x00007ffff671d388 in QGuiApplicationPrivate::processDrop(QWindow*, QMimeData const*, QPoint const&, QFlags<Qt::DropAction>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #20 0x00007ffff66fac7f in QWindowSystemInterface::handleDrop(QWindow*, QMimeData const*, QPoint const&, QFlags<Qt::DropAction>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #21 0x00007fffefd3e211 in ?? () from /usr/lib/libQt5XcbQpa.so.5 #22 0x00007fffefd406d7 in ?? () from /usr/lib/libQt5XcbQpa.so.5 #23 0x00007ffff671093a in QBasicDrag::eventFilter(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #24 0x00007ffff5bb60e4 in QCoreApplicationPrivate::sendThroughApplicationEventFilters(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #25 0x00007ffff6edde08 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #26 0x00007ffff6ee5236 in QApplication::notify(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #27 0x00007ffff5bb6458 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #28 0x00007ffff671bbb0 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #29 0x00007ffff671d955 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #30 0x00007ffff66faa1b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #31 0x00007fffefd934c0 in ?? () from /usr/lib/libQt5XcbQpa.so.5 #32 0x00007ffff15257b7 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0 #33 0x00007ffff1525a20 in ?? () from /usr/lib/libglib-2.0.so.0 #34 0x00007ffff1525acc in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0 #35 0x00007ffff5c06cbf in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #36 0x00007ffff5bb49ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #37 0x00007ffff6710d02 in QBasicDrag::drag(QDrag*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #38 0x00007ffff672be71 in QDragManager::drag(QDrag*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #39 0x00007ffff672a85c in QDrag::exec(QFlags<Qt::DropAction>, Qt::DropAction) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #40 0x00007fffd3572341 in qmt::ModelTreeView::startDrag(QFlags<Qt::DropAction>) () from /home/jcelerier/Qt/Tools/QtCreator/lib/qtcreator/plugins/../libModeling.so.4 #41 0x00007ffff71168d6 in QAbstractItemView::mouseMoveEvent(QMouseEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #42 0x00007ffff7154ee3 in QTreeView::mouseMoveEvent(QMouseEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #43 0x00007ffff6f22008 in QWidget::event(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #44 0x00007ffff70017be in QFrame::event(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #45 0x00007ffff71172cc in QAbstractItemView::viewportEvent(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #46 0x00007ffff71545bc in QTreeView::viewportEvent(QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #47 0x00007ffff5bb61f2 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #48 0x00007ffff6eddda5 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #49 0x00007ffff6ee5c2d in QApplication::notify(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #50 0x00007ffff5bb6458 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #51 0x00007ffff6ee487f in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #52 0x00007ffff6f3b9f6 in ?? () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #53 0x00007ffff6f3e32b in ?? () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #54 0x00007ffff6edddcc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #55 0x00007ffff6ee5236 in QApplication::notify(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Widgets.so.5 #56 0x00007ffff5bb6458 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #57 0x00007ffff671bbb0 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #58 0x00007ffff671d955 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #59 0x00007ffff66faa1b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Gui.so.5 #60 0x00007fffefd934c0 in ?? () from /usr/lib/libQt5XcbQpa.so.5 #61 0x00007ffff15257b7 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0 #62 0x00007ffff1525a20 in ?? () from /usr/lib/libglib-2.0.so.0 #63 0x00007ffff1525acc in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0 #64 0x00007ffff5c06cbf in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #65 0x00007ffff5bb49ca in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #66 0x00007ffff5bbc9f4 in QCoreApplication::exec() () from /home/jcelerier/Qt/Tools/QtCreator/bin/../lib/Qt/lib/libQt5Core.so.5 #67 0x0000000000409aa7 in ?? () #68 0x00007ffff486343a in __libc_start_main () from /usr/lib/libc.so.6 #69 0x000000000040a401 in ?? ()
| For Gerrit Dashboard: QTCREATORBUG-18262 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 200826,4 | ModelEditor: Fix a crash moving packages into itself | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |