ModelEditor: Fix a crash moving packages into itself

Change-Id: I1a722b9514ee0a57d8bd8be2f4ea05ed87c6686d
Task-number: QTCREATORBUG-18262
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>